@@ -5,18 +5,17 @@ import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
 import java.util.Calendar;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import javax.mail.MessagingException;
 import javax.servlet.http.HttpServletRequest;
 import javax.transaction.Transactional;
 import javax.validation.Valid;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.joda.time.DateTime;
 import org.springframework.beans.factory.annotation.*;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Controller;
@@ -108,7 +107,7 @@ public class TicketsController {
 		}
 
         //check empty users, server side validation
-        List<Visitor> toBeRemoved = registrant.getVisitors().stream().filter(v -> isEmpty(v.getEmail()) || isEmpty(v.getName())).collect(Collectors.toList());
+        List<Visitor> toBeRemoved = registrant.getVisitors().stream().filter(v -> isEmpty(v.getEmail()) || isEmpty(v.getName())).toList();
         registrant.getVisitors().removeAll(toBeRemoved);
         registrant.getVisitors().forEach(visitor -> visitor.setStatus(VisitorStatus.REQUESTING));
 
@@ -116,7 +115,7 @@ public class TicketsController {
             handlePersonalRegistrant(registrant);
         }
 
-        registrant.setCreatedDate(DateTime.now());
+        registrant.setCreatedDate(LocalDateTime.now());
         registrant.setPaymentType(Registrant.PaymentType.BANK_TRANSFER);
         Registrant savedRegistrant = registrantFacade.save(registrant);
 
@@ -150,10 +149,12 @@ public class TicketsController {
 
     private void sendPDF(Registrant registrant, String pdfFilename, byte[] pdfContent) {
         try {
-            mailFacade.sendEmail(registrant.getEmail(), "jPrime.io invoice",
-                    "Thank you for registering at jPrime! Your proforma invoice is attached as part of this mail.\n\n" +
-                    "Once we confirm your payment, we'll send you the original invoice.\n\n" +
-                    "The attendees that you registered will receive the tickets a few days before the event on their emails.",
+            mailFacade.sendEmail(registrant.getEmail(), "jPrime.io invoice", """
+                    Thank you for registering at jPrime! Your proforma invoice is attached as part of this mail.
+
+                    Once we confirm your payment, we'll send you the original invoice.
+
+                    The attendees that you registered will receive the tickets a few days before the event on their emails.""",
                     pdfContent, pdfFilename);
             String registrations = registrant.getVisitors().toString();
             mailFacade.sendEmail("conference@jprime.io", "jPrime.io invoice",
